# cmakeLearn

./: README.md
v1/: CMakeLists.txt
v2/: CMakeLists.txt
v2/output/: app
v3/: CMakeLists.txt
v4/: CMakeLists.txt
v5/: CMakeLists.txt
v5/src/: add.c
v6/: CMakeLists.txt
v7/: CMakeLists.txt
v8/: CMakeLists.txt
v9/: CMakeLists.txt
